Fix result tab not showing on mobile/tablet viewports

--- a/client/css/_scratch.sass
+++ b/client/css/_scratch.sass
@@ -73,6 +73,7 @@ main
 
   @media #{$tablet}
     flex-direction: column
+    position: relative
 
 .resizable
   position: relative
@@ -195,6 +196,10 @@ $editor-header-size: 0.875em
   @media #{$tablet}
     position: absolute
     width: 100%
+    top: 1.4em
+    bottom: 1.5em
+    // height: 100%
+    // margin-bottom: 1.5em
 
     .rg-top
       display: none
